--- a/_posts/python/3d-surface-lighting/2015-06-30-3d-camera-lighting.html
+++ b/_posts/python/3d-surface-lighting/2015-06-30-3d-camera-lighting.html
@@ -102,7 +102,7 @@ order: 16
 <div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2469.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/425.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -132,7 +132,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 
 
 <span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z1</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">ambient</span><span class="o">=</span><span class="mf">0.2</span><span class="p">))</span>
-<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">ambient</span><span class="o">=</span><span class="mf">0.9</span><span class="p">))</span>
+<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span><span class="n">showscale</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">ambient</span><span class="o">=</span><span class="mf">0.9</span><span class="p">))</span>
 
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace2</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
@@ -160,7 +160,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2471.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/427.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -186,7 +186,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span><span class="n">specs</span><span class="o">=</span><span class="p">[[{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">},{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">}</span> <span class="p">]])</span>
 <span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z1</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">roughness</span><span class="o">=</span><span class="mf">0.1</span><span class="p">))</span>
-<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">roughness</span><span class="o">=</span><span class="mf">0.9</span><span class="p">))</span>
+<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span><span class="n">showscale</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">roughness</span><span class="o">=</span><span class="mf">0.9</span><span class="p">))</span>
 
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace2</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
@@ -213,7 +213,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2473.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/429.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -239,7 +239,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span><span class="n">specs</span><span class="o">=</span><span class="p">[[{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">},{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">}</span> <span class="p">]])</span>
 <span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z1</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">diffuse</span><span class="o">=</span><span class="mf">0.1</span><span class="p">))</span>
-<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">diffuse</span><span class="o">=</span><span class="mf">0.9</span><span class="p">))</span>
+<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span><span class="n">showscale</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span><span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">diffuse</span><span class="o">=</span><span class="mf">0.9</span><span class="p">))</span>
 
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace2</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
@@ -266,7 +266,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[8]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2475.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/431.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -292,7 +292,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span><span class="n">specs</span><span class="o">=</span><span class="p">[[{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">},{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">}</span> <span class="p">]])</span>
 <span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z1</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">fresnel</span><span class="o">=</span><span class="mf">0.1</span><span class="p">))</span>
-<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">fresnel</span><span class="o">=</span><span class="mf">4.5</span><span class="p">))</span>
+<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span><span class="n">showscale</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">fresnel</span><span class="o">=</span><span class="mf">4.5</span><span class="p">))</span>
 
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace2</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
@@ -338,7 +338,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2477.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/433.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -364,7 +364,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span><span class="n">specs</span><span class="o">=</span><span class="p">[[{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">},{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">}</span> <span class="p">]])</span>
 <span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z1</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">specular</span><span class="o">=</span><span class="mf">0.2</span><span class="p">))</span>
-<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">specular</span><span class="o">=</span><span class="mi">2</span><span class="p">))</span>
+<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z2</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span><span class="n">showscale</span><span class="o">=</span><span class="bp">False</span> <span class="p">,</span><span class="n">lighting</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">specular</span><span class="o">=</span><span class="mi">2</span><span class="p">))</span>
 
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace2</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
@@ -391,7 +391,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[11]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2479.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/435.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -432,7 +432,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[12]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2481.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/437.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
